--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=0.0">
         <link rel="stylesheet" href="shooting.css">
         <link rel="stylesheet" href="logo.css">
-        <title>Shooting by AP</title>
-        <link rel="icon" type="image/png" sizes="32x32" href="file:///C:/Users/asus/Desktop/pro/site%20insta/logo.PNG">
+        <title>Shooting</title>
     </head>
 
 
 
     <body>
+
+
+        
 
         <div class='tout'>
 
@@ -169,7 +171,7 @@
         <a href="https://www.instagram.com/phot_adri/"</a>
             <img class='insta' src="https://img.icons8.com/3d-fluency/344/instagram-new.png"</a>
 
-    </body>
+    <script src="https://www.drv.tw/inc/wd.js?s=shootingphotoadrienpichon95"></script></body>
 
 
 
